catkin_ws/logs/rgbd_slam/build.make.027.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/rgbd_slam/src/main.cpp: In function ‘void testTransform()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/rgbd_slam/src/main.cpp:147:9: error: expected ‘(’ before ‘int’
     for int (i = 1; i<30;i++){
         ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/rgbd_slam/src/main.cpp:147:14: error: ‘i’ was not declared in this scope
     for int (i = 1; i<30;i++){
              ^
make[2]: *** [CMakeFiles/rgbd_slam.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/rgbd_slam.dir/all] Error 2
make: *** [all] Error 2
